ボタンサイズを変更

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1>crossbeats REV. お題ジェネレータ</h1>
-    <button id="gen">click</button>
+    <button style="font-size: 24px; padding 10px 30px" id="gen">生成!</button>
     <p style="font-size: 32px;" id="task">ここにお題が生成されます</p>
     <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
     <script src="js/revtask.js"></script>
